--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <table cellspacing="20">
             <tr>
-                <td><img src="images/jade.png" alt="Jade Profile Picture"></td>
+                <td><img src="jade.png" alt="Jade Profile Picture"></td>
                 <td><h1>Jade Ortiz</h1>
         <p><em>Junior Web Developer</em></p>
         <p>I am a Brazilian Junior Web Developer, I love coffee and learning.</p></td>
