--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
                     <td>2022</td>
                     <td>Marketing</td>
                 </tr>
+                    <tr>
+                        <td>2022</td>
+                        <td>English Classes</td>
+                    </tr>
                 </tbody>
             </table>
             <hr>
